Fix height cutoff

--- a/extension/src/content/shadow-root.css
+++ b/extension/src/content/shadow-root.css
@@ -33,7 +33,7 @@ body {
 
 main {
   position: fixed;
-  inset: auto 24px 24px auto;
+  inset: 48px 24px 24px auto;
   width: 340px;
   max-height: calc(100vh - 48px);
   overflow-y: auto;
